--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Portfolio</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Full Stack Developer Portfolio" />
+    <meta name="author" content="Your Name" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/favicon-96x96.png" />
+    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
+    <!-- Font Awesome Free -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <title>My Portfolio | Tools</title>
+
+    <!-- OpenGraph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="My Portfolio" />
+    <meta property="og:image" content="assets/og-image.png" />
+    <meta property="og:description" content="Full Stack Developer Portfolio" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="My Portfolio" />
+    <meta name="twitter:description" content="Full Stack Developer Portfolio" />
+    <meta name="twitter:image" content="assets/og-image.png" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
