--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
 
-    <title>My Portfolio | Tools</title>
+    <title>Nguyễn Quang Phước | Portfolio</title>
 
     <!-- OpenGraph -->
     <meta property="og:type" content="website" />
