--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
       href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
     <title>Nguyễn Quang Phước | Portfolio</title>
 
